[package]
name = "janus_messages"
description = "Distributed Aggregation Protocol message definitions used in Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_messages"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
derivative.workspace = true
hex = "0.4"
num_enum = "0.7.2"
# We can't pull prio in from the workspace because that would enable default features, and we do not
# want prio/crypto-dependencies
prio = { version = "0.16.0", git = "https://github.com/divviup/libprio-rs", rev = "66749e93cba94b33d6f90471189e12a54b603f63", default-features = false, features = ["multithreaded", "experimental"] }
# TODO(timg): go back to a released version of prio
#prio = { version = "0.15.3", default-features = false, features = ["multithreaded", "experimental"] }
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
url = "2.5.0"

[dev-dependencies]
assert_matches.workspace = true
serde_test.workspace = true
