[package]
name = "janus_messages"
description = "Distributed Aggregation Protocol message definitions used in Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_messages"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
derivative.workspace = true
hex = "0.4"
num_enum = "0.7.2"
# We can't pull prio in from the workspace because that would enable default features, and we do not
# want prio/crypto-dependencies
# TODO(timg) go back to released prio
#prio = { version = "0.16.1", default-features = false, features = ["multithreaded", "experimental"] }
prio = { git = "https://github.com/divviup/libprio-rs", default-features = false, features = ["multithreaded", "experimental"], rev = "8774573dee1932c19c28ab83173b358b42a52b78" }
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
url = "2.5.0"

[dev-dependencies]
assert_matches.workspace = true
serde_test.workspace = true
