[package]
name = "janus_messages"
description = "Distributed Aggregation Protocol message definitions used in Janus, the server powering ISRG's Divvi Up."
documentation = "https://docs.rs/janus_messages"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
test-util = []

[dependencies]
anyhow.workspace = true
base64.workspace = true
educe.workspace = true
hex = { workspace = true }
num_enum = { workspace = true }
# Make sure not to enable default-features on prio, as we want clients to be
# able to get message definitions without pulling in prio/crypto-dependencies
prio = { workspace = true, features = ["experimental"] }
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
url = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
janus_messages = { workspace = true, features = ["test-util"] }
pretty_assertions.workspace = true
serde_test.workspace = true
