[package]
name = "monolithic_integration_test"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.63"
publish = false

[features]
daphne = [
    "dep:daphne",
    "dep:hex",
    "dep:rand",
    "dep:regex",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
]
kube-openssl = ["kube/openssl-tls"]

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
daphne = { git = "https://github.com/cloudflare/daphne", rev = "6301e712df216a0301c42cb3177110dd8217fa84", optional = true }
futures = "0.3.23"
hex = { version = "0.4", optional = true }
interop_binaries = { path = "../interop_binaries", features = ["testcontainer"] }
janus_core = { path = "../janus_core", features = ["test-util"] }
janus_server = { path = "../janus_server", features = ["test-util"] }
k8s-openapi = { version = "0.13.1", features = ["v1_20"] }  # keep this version in sync with what is referenced by the indirect dependency via `kube`
kube = { version = "0.65.0", default-features = false, features = ["client"] }
lazy_static = "1"
portpicker = "0.1"
rand = { version = "0.8", optional = true }
regex = { version = "1", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
testcontainers = "0.14.0"
tokio = { version = "1", features = ["full", "tracing"], optional = true }
tracing = "0.1.36"
url = { version = "2.2.2", features = ["serde"] }

[dev-dependencies]
http = "0.2"
itertools = "0.10"
janus_client = { path = "../janus_client" }
janus_server = { path = "../janus_server", features = ["test-util"] }
monolithic_integration_test = { path = ".", features = ["daphne"] }
prio = "0.8.2"
