[package]
name = "janus_tools"
description = "Command line tools associated with Janus, the server powering ISRG's Divvi Up."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_collector/fpvec_bounded_l2", "prio/experimental"]

[dependencies]
anyhow = "1"
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["cargo", "derive", "env"] }
derivative.workspace = true
fixed = { version = "1.24", optional = true }
janus_collector.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
prio.workspace = true
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "json"] }
serde_json.workspace = true
serde_yaml = "0.9.27"
tokio.workspace = true
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter", "fmt"] }
url = "2.4.1"

[dev-dependencies]
assert_matches = "1"
cfg-if = "1.0.0"
janus_core = { workspace = true, features = ["test-util"] }
rand = "0.8"
tempfile = "3.8.1"
trycmd = "0.14.19"
