[package]
name = "janus_tools"
description = "Command line tools associated with Janus, the server powering ISRG's Divvi Up."
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
fpvec_bounded_l2 = ["dep:fixed", "janus_collector/fpvec_bounded_l2", "prio/experimental"]

[dependencies]
anyhow = { workspace = true }
base64.workspace = true
clap.workspace = true
fixed = { workspace = true, optional = true }
janus_collector.workspace = true
janus_core.workspace = true
janus_messages.workspace = true
prio.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
yaml_serde.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter", "fmt"] }
url = { workspace = true }

[dev-dependencies]
assert_matches.workspace = true
cfg-if = { workspace = true }
janus_core = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
trycmd = { workspace = true }
