[package]
name = "xtask"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.9", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tempfile = "3.8.1"
